--- a/Do Male and Female Athletes Get Olympic Medals at Different Age.ipynb
+++ b/Do Male and Female Athletes Get Olympic Medals at Different Age.ipynb
@@ -736,9 +736,9 @@
    "source": [
     "## Plotting Tthe data\n",
     "### We will plot the data now. \n",
-    "### First bar chart represents Male madels vs age group\n",
-    "### Second bar chart represents Female madels vs age group\n",
-    "### Third plot conntains Confidence interval and result of t-test"
+    "### First bar chart represents Male medals vs age group\n",
+    "### Second bar chart represents Female medals vs age group\n",
+    "### Third plot contains Confidence interval and result of t-test"
    ]
   },
   {
@@ -1656,7 +1656,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Firstly we plotted male and female madels vs age group. That gave us similar kind of bars, but it looks like female starts getting medals at lower ages than male. To proove whether this visual difference is significant or not, we first plot confidence intervals. If the confidence intervals do not overlap, we may proove that our null hypothesis can be rejected."
+    "Firstly we plotted male and female medals vs age group. That gave us similar kind of bars, but it looks like female starts getting medals at lower ages than male. To prove whether this visual difference is significant or not, we first plot confidence intervals. If the confidence intervals do not overlap, we may prove that our null hypothesis can be rejected."
    ]
   },
   {
